--- a/Eindopdracht:KleurenToggle/index.html
+++ b/Eindopdracht:KleurenToggle/index.html
@@ -13,15 +13,15 @@
 
     <nav class="nav-main">
         <div class="btn-toggle-nav"></div>
-
     </nav>
 
     <aside class="nav-sidebar">
         <ul>
-            <li><a href="#">red</a></li>
-            <li><a href="#">purple</a></li>
-            <li><a href="#">green</a></li>
-            <li><a href="#">yellow</a></li>
+            <li id="home"><a href="#">Home</a></li>
+            <li id="red"><a href="#">Red</a></li>
+            <li id="orange"><a href="#">Orange</a></li>
+            <li id="purple"><a href="#">Purple</a></li>
+            <li id="green"><a href="#">Green</a></li>
         </ul>
 
     </aside>
