--- a/Eindopdracht:Filmzoeker/index.html
+++ b/Eindopdracht:Filmzoeker/index.html
@@ -9,30 +9,30 @@
 </head>
 
 <body>
-    <nav>
+    <nav id="radio-Buttons">
 
         <div>
-            <input type="radio" id="LaatsteFilm" name="Movie" value="Laatste Films" checked>
+            <input type="radio" id="jo" name="Movie" value="Laatste Films" checked>
             <label for="LaatsteFilm">Laatse Films</label>
         </div>
 
         <div>
-            <input type="radio" id="Avenger" name="Movie" value="Avenger">
+            <input type="radio" id="jo" name="Movie" value="Avenger">
             <label for="Avenger">Avenger</label>
         </div>
 
         <div>
-            <input type="radio" id="Xmen" name="Movie" value="X-Men">
+            <input type="radio" id="jo" name="Movie" value="X-Men">
             <label for="Xmen">X-Men</label>
         </div>
 
         <div>
-            <input type="radio" id="Princess" name="Movie" value="Princess">
+            <input type="radio" id="jo" name="Movie" value="Princess">
             <label for="Princcess">Princcess</label>
         </div>
 
         <div>
-            <input type="radio" id="Batman" name="Movie" value="Batman">
+            <input type="radio" id="jo" name="Movie" value="Batman">
             <label for="Batman">Batman</label>
         </div>
 
@@ -44,9 +44,6 @@
 
             </ul>
         </div>
-
-
-
     </main>
     <script defer src="scriptdb.js"></script>
     <script defer src="script.js"></script>
