--- a/ToDO/index.html
+++ b/ToDO/index.html
@@ -9,20 +9,11 @@
 </head>
 
 <body>
-
-
-
     <form id="postData">
-        <div>
-            <input type="text" name="" id="title">
-        </div>
-
-        <input type="submit" value="POST">
+        <input type="text" name="" id="title">
+        <input type="submit" value="Add Task">
     </form>
-
-
     <ul id="lijst"></ul>
-
 
     <script src="script.js"></script>
 </body>
