--- a/ToDO/index.html
+++ b/ToDO/index.html
@@ -10,12 +10,12 @@
 
 <body>
     <form id="postData">
-        <input type="text" name="" id="title">
+        <input type="text" name="" id="vul">
         <input type="submit" value="Add Task">
     </form>
     <ul id="lijst"></ul>
-
-    <script src="script.js"></script>
+    <script defer src="api-client.js"></script>
+    <script defer src="script.js"></script>
 </body>
 
 </html>
